--- a/excalidraw-app/index.scss
+++ b/excalidraw-app/index.scss
@@ -81,8 +81,9 @@
 
   .dyldraw-auth-button {
     --button-width: auto;
+    --button-height: var(--lg-button-size);
     --button-bg: var(--color-primary);
-    --button-color: #fff;
+    --button-color: var(--color-icon-white);
     --button-border: var(--color-primary);
     --button-hover-bg: var(--color-primary-darker);
     --button-hover-border: var(--color-primary-darker);
@@ -93,6 +94,7 @@
     padding-inline: 0.8rem;
     font-size: 0.875rem;
     font-weight: 600;
+    line-height: 1;
 
     svg {
       width: 1rem;
@@ -102,7 +104,7 @@
 
   .dyldraw-auth-button--signed-in {
     --button-bg: var(--color-danger-dark);
-    --button-color: #fff;
+    --button-color: var(--color-danger-text);
     --button-border: var(--color-danger-dark);
     --button-hover-bg: var(--color-danger-darker);
     --button-hover-border: var(--color-danger-darker);
